fix(login): Corrige overflow de inputs em telas menores

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -260,7 +260,7 @@ button:disabled {
 
     .usuario, .senha {
         font-size: 1rem;
-        margin: 0.5rem;
+        margin: 0;
         text-align: left;
     }
 
